--- a/now.json
+++ b/now.json
@@ -20,6 +20,11 @@
       "headers": { "Location": "/docs/configuration$2" }
     },
     {
+      "src": "/docs/router-status/(?<code>[^/]*)",
+      "status": 301,
+      "headers": { "Location": "/docs/v2/network/status-codes#$code" }
+    },
+    {
       "src": "/docs/_next(/static/(?:[^/]+/pages|chunks|runtime)/.+)",
       "headers": {
         "cache-control": "immutable,max-age=31536000"
